// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 error test 1`] = `
"Unexpected token, expected \\"(\\" (1:5)
> 1 | for each (a in b) {}
    |     ^"
`;

exports[`snippet: #0 error test 2`] = `
"Unexpected identifier, expected the token \`(\` (1:5)
> 1 | for each (a in b) {}
    |     ^^^^"
`;

exports[`snippet: #0 error test 3`] = `
"'(' expected. (1:5)
> 1 | for each (a in b) {}
    |     ^"
`;

exports[`snippet: #0 error test 4`] = `
"Unexpected token, expected \\"(\\" (1:5)
> 1 | for each (a in b) {}
    |     ^"
`;

exports[`snippet: #0 error test 5`] = `
"Unexpected token, expected \\"(\\" (1:5)
> 1 | for each (a in b) {}
    |     ^"
`;

exports[`snippet: #0 error test 6`] = `
"Unexpected token each (1:5)
> 1 | for each (a in b) {}
    |     ^"
`;
